[package]
name = "ssh-agent-mux"
description = "Combine keys from multiple SSH agents into a single agent socket"
repository = "https://github.com/overhacked/ssh-agent-mux"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["ssh", "ssh-agent", "authentication"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".*"]
version = "0.1.3" # bumped by release.sh
edition = "2021"
rust-version = "1.75.0"

[dependencies]
clap-serde-derive = "0.2.1"
expand-tilde = "0.6.0"
flexi_logger = "0.30.1"
ssh-agent-lib = "0.5.1"
toml = "0.8.20"

[dependencies.color-eyre]
version = "0.6.3"
default-features = false
features = ["track-caller"]

[dependencies.log]
version = "0.4.27"
features = ["std"]

[dependencies.serde]
version = "1.0.145"
features = ["derive"]

[dependencies.service-manager]
version = "0.8.0"
default-features = false

[dependencies.tokio]
version = "1.44.2"
features = ["rt", "macros", "signal", "sync"]

[dev-dependencies]
duct = "0.13.7"
tempfile = "3.19.1"
