[package]
name = "ssh-agent-mux"
description = "Combine keys from multiple SSH agents into a single agent socket"
repository = "https://github.com/overhacked/ssh-agent-mux"
license = "Apache-2.0 OR BSD-3-Clause"
keywords = ["ssh", "ssh-agent", "authentication"]
categories = ["command-line-utilities", "network-programming"]
exclude = [".*"]
version = "0.2.0" # bumped by release.sh
edition = "2021"
rust-version = "1.83.0"

[dependencies]
clap-serde-derive = "0.2.1"
flexi_logger = "0.31.7"
ssh-agent-lib = "0.5.1"
toml = "0.9.10"

[dependencies.shellexpand]
version = "3.1.1"
features = ["path"]

[dependencies.color-eyre]
version = "0.6.5"
default-features = false
features = ["track-caller"]

[dependencies.log]
version = "0.4.29"
features = ["std"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dependencies.service-manager]
version = "0.10.0"
default-features = false

[dependencies.tokio]
version = "1.48.0"
features = ["rt", "macros", "signal", "sync"]

[dev-dependencies]
duct = "1.1.1"
tempfile = "3.23.0"
